--- a/our_work/content-absence.html
+++ b/our_work/content-absence.html
@@ -40,7 +40,7 @@
 
 
 
-<p> At the request of the Redwood City 2020 Truancy Committee, the John W. Gardner Center for Youth and Their Communities began an analysis to study truancy and early chronic absenteeism among Redwood City students.  Through the Youth Data Archive (YDA), the Gardner Center has linked data from Redwood City School District (RCSD), Sequoia Union High School District (SUHSD), and the San Mateo County Human Services Agency to examine the extent to which truancy and early chronic absenteeism are present in the greater Redwood City area. This project also explores the causes, consequences, and correlates of these issues that may be present in the community. Findings from these investigations may help schools and the community to take action to assist students who are truant or chronically absent in the greater Redwood City area. </p>
+<p> At the request of the Redwood City 2020 Truancy Committee, the Gardner Center began an analysis to study truancy and early chronic absenteeism among Redwood City students.  Through the Youth Data Archive (YDA), the Gardner Center linked data from Redwood City School District (RCSD), Sequoia Union High School District (SUHSD), and the San Mateo County Human Services Agency to examine the extent to which truancy and early chronic absenteeism are present in the greater Redwood City area. This project also explored the causes, consequences, and correlates of these issues that may be present in the community. Findings from these investigations may help schools and the community to take action to assist students who are truant or chronically absent in the greater Redwood City area. </p>
 
 <br>
 
