--- a/our_work/content-allwork.html
+++ b/our_work/content-allwork.html
@@ -17,7 +17,7 @@
 
  <h1 class="content-text-header">B</h1><br>
  <ul style="list-style: none;">
-			<li><a href="broadaccess.html">Broad Access Colleges in the San Francisco Bay Area Technology Economy</a></li>
+			<li><a href="broadaccess.html">Broad Access Colleges in the San Francisco Bay Area Technology Economy</a></li></u><br>
 
            <h1 class="content-text-header">C</h1>
 		<ul style="list-style: none;">
