--- a/our_work/content-bts.html
+++ b/our_work/content-bts.html
@@ -39,7 +39,7 @@
     </aside>
 
 
-      <p>San Francisco’s Bridge to Success (BtS) initiative brings together the City and County of San Francisco, the San Francisco Unified School District (SFUSD), the City College of San Francisco (CCSF), and key community organizations to promote postsecondary success for underrepresented students. The goals of the partnership are to create shared ownership of the responsibility for postsecondary attainment and to build a coordinated strategy to define on the ground changes needed to make a real difference in the lives of youth. To help achieve these goals, the Youth Data Archive (YDA) provides quantitative research and analytic support to assist BtS partners to make informed policy or programmatic changes designed to improve youth outcomes.</p>
+      <p>San Francisco’s Bridge to Success (BtS) initiative brings together the City and County of San Francisco, the San Francisco Unified School District (SFUSD), the City College of San Francisco (CCSF), and key community organizations to promote postsecondary success for underrepresented students. The goals of the partnership are to create shared ownership of the responsibility for postsecondary attainment and to build a coordinated strategy to define on the ground changes needed to make a real difference in the lives of youth. To help achieve these goals, the Gardner Center provided quantitative research and analytic support to assist BtS partners to make informed policy or programmatic changes designed to improve youth outcomes.</p>
          </div>
 
       
