--- a/our_work/content-collegeaccess.html
+++ b/our_work/content-collegeaccess.html
@@ -28,7 +28,7 @@
 
  <p>In California and nationally, low-income, minority, and first generation to attend students constitute a disproportionately low number of students who achieve success in college. The subset of boys and young men of color fare even worse. The College Access Foundation of California (CACF) has a particular interest in addressing the unique challenges that boys and young men of color face as they access college and work toward completion. As such, CAFC has asked the Gardner Center to work on two related projects: (1) identifying effective interventions and best practices at the individual and institutional level for boys and young men of color; and (2) increasing the effectiveness of grantees through improved understanding and use of data.</p>
 <br>
-<p>CAFC plans to use the data we collect on best practices to inform their funding strategy moving forward, and CAFC intermendiaries will use new knowledge on data use to improve services to students and institutions, as well as the direct service organizations they each oversee.</p>
+<p>CAFC plans to use the data we collect on best practices to inform their funding strategy moving forward, and CAFC intermediaries will use new knowledge on data use to improve services to students and institutions, as well as the direct service organizations they each oversee.</p>
 <br>
 <p> 
          </div>
