--- a/our_work/content-cris.html
+++ b/our_work/content-cris.html
@@ -43,13 +43,14 @@
 
 <br><br><br> <!---spacing under title-->
 
-<p>Educators nationwide confront a troubling phenomenon: increasingly, students leave high school unready for college, as evidenced by high rates of placement into remedial courses and low rates of college completion. Many students also lack either the attitudes or skills essential to succeed in a postsecondary setting, or knowledge of how to apply to, finance, and navigate college. Moreover, other capable students never apply to college because they are unaware of opportunities, didn't not take the necessary coursework, or did not imagine college in their futures. These realities highlight a fundamental distinction: there is more to college readiness than college eligibility. The gap between college eligibility and college readiness raises concerns that students' potential—and their potential contribution to society—will be unrealized.</p>
+<p>Educators nationwide confront a troubling phenomenon: increasingly, students leave high school unready for college, as evidenced by high rates of placement into remedial courses and low rates of college completion. Many students also lack either the attitudes or skills essential to succeed in a postsecondary setting, or knowledge of how to apply to, finance, and navigate college. Moreover, other capable students never apply to college because they are unaware of opportunities, did not take the necessary coursework, or did not imagine college in their futures. These realities highlight a fundamental distinction: there is more to college readiness than college eligibility. The gap between college eligibility and college readiness raises concerns that students' potential—and their potential contribution to society—will be unrealized.</p>
 
  
 <br>
 <p>In 2011, the Bill & Melinda Gates Foundation launched the College Readiness Indicator Systems (CRIS) intiative, bringing together three research partners—the John W. Gardner Center for Youth and Their Communities at Stanford University, the Annenberg Institute for School Reform at Brown University, and the University of Chicago Consortium on Chicago School Research—and four urban districts (Dallas Independent School District, Pittsburgh Public Schools, San Jose Unified School District, and the School District of Philadelphia) and one school support network (New Visions for Public Schools in New York City)—to develop and study the implementation of a system of indicators and supports designed to significantly increase students' readiness to enter and succeed in college.</p>
 <br>
 <span class="content-bold">Dimensions of College Readiness: Beyond GPA & Test Scores</span>
+<br>
 <br>
 <p>With the aim of providing districts with resources to help focus their efforts to build an effective indicator system, the CRIS approach goes beyond the goal of high school graduation to target factors directly relevant to college readiness and success, in particular:</p>
 <br>
@@ -61,8 +62,10 @@
 <br>
  <span class="content-bold">Students, Schools, and Systems: A Tri-Level Approach</span> 
 <br>
+<br>
 Further, CRIS generates and uses data that reflect activities, resources, processes, and outcomes at the student, school, and district levels. This tri-level approach enables districts to support college readiness more comprehensively:                                     
 <ul>
+<br>
 <li><b>Individual Level:</b>  students’ personal progress toward college readiness (e.g., courses and credits, study skills, persistence, expectations for future, knowledge about college requirements and choices).</li>
 
 <li><b>Setting Level:</b>  the resources and opportunities for students provided by a program, classroom or school (e.g., teachers’ efforts to push students to high levels of academic performance, college-going culture and resources, instructional coherence and rigor).</li>
@@ -71,10 +74,11 @@ Further, CRIS generates and uses data that reflect activities, resources, proces
  <br>
 
 <span class="content-bold">Our Role</span>
-
+<br>
+<br>
 <p>As a CRIS initiative partners, Gardner Center researchers developed and studied the implementation of the tri-level CRIS in conjuction with districts, using a flexible, "design-build" approach.</p>
 <br>
-<p>Specifically the Gardner Center supports districts by:<p>
+<p>Specifically the Gardner Center has supported districts by:<p>
 <br>
 <ul>
 <li> Synthesizing the latest research on indicators associated with the key domains of college readiness (academic preparedness, academic tenacity, and college knowledge) to create an empirically-based foundation for the work;</li>
@@ -90,9 +94,10 @@ Further, CRIS generates and uses data that reflect activities, resources, proces
 <li>Helping districts link college readiness indicators to policies and practices to address students’ needs in time to enter college. </li>
 
  </ul>
-
+<br>
 <span class="content-bold">The CRIS Resource Series</span>
-
+<br>
+<br>
 Developed by the CRIS research partners, the CRIS Resource Series builds on lessons learned over the course of the three-year initiative and offers guidance to schools and districts that aim to develop and enact effective indicator and support systems. Each resource was created with a particular audience in mind. As such, readers may opt to review the whole series or select only those resources that apply to their particular role or interest. Designed to guide a district through its successful implementaiton of a college readiness indicator system, the six-part CRIS Resource Series will be available for free download on May 1, 2014.
 
 <p>For more information about the College Readiness Indicator Systems initiative, please contact Leslie Patron at <a href="mailto:lpatron@stanford.edu"> lpatron@stanford.edu. </a> </p>         </div>
