--- a/our_work/content-cydi.html
+++ b/our_work/content-cydi.html
@@ -100,7 +100,7 @@
 		<h1 class="content-text-header">About CYDI</h1>
 
 		<p>Launched in the spring of 2008 by Redwood City 2020 (RWC 2020) in partnership with the John W. Gardner Center for Youth
-		and Their Communities (JGC) at Stanford University, CYDI brings together over 35 organizations serving the Redwood City 		and North Fair Oaks community to accomplish more for and with youth than they can do alone. Through collaboration, we 			work to promote shared responsibility across different sectors of our community for all our youth so that they grow up 			with the knowledge, skills, and social attributes they need for success in school, work and life. As a network of 			partners, we aim to achieve the following outcomes by 2020:</p>
+		and Their Communities at Stanford University, CYDI brings together over 35 organizations serving the Redwood City 		and North Fair Oaks community to accomplish more for and with youth than they can do alone. Through collaboration, we 			work to promote shared responsibility across different sectors of our community for all our youth so that they grow up 			with the knowledge, skills, and social attributes they need for success in school, work and life. As a network of 			partners, we aim to achieve the following outcomes by 2020:</p>
 <br>
 
 <ol>
