--- a/our_work/content-ece.html
+++ b/our_work/content-ece.html
@@ -33,10 +33,10 @@
     </div> <!--end right side box div-->
     </aside>
 
-<p>The Early Childhood and Community Schools Linkages Project seeks to foster improved collaboration and continuity across early childhood education (ECE) programs and elementary community schools. Since 2009, three regions (Multnomah County, OR; Albuquerque, NM; and Tulsa, OK) have been implementing a number of practices designed to create settings and systems that improve the experiences and outcomes of vulnerable children and families as they move through the transition between ECE settings and elementary community school settings.
+<p>The Early Childhood and Community Schools Linkages Project sought to foster improved collaboration and continuity across early childhood education (ECE) programs and elementary community schools. Since 2009, three regions (Multnomah County, OR; Albuquerque, NM; and Tulsa, OK) have been implementing a number of practices designed to create settings and systems that improve the experiences and outcomes of vulnerable children and families as they move through the transition between ECE settings and elementary community school settings.
 <br>
 <br>
-<p>The JGC serves as a research partner in the context of this effort. The three-year implementation study describes promising practices, preliminary outcomes, and a number of conditions that facilitate and hinder the building of smooth, effective, and sustainable linkages.</p>
+<p>The Gardner Center served as a research partner in the context of this effort. The three-year implementation study describes promising practices, preliminary outcomes, and a number of conditions that facilitate and hinder the building of smooth, effective, and sustainable linkages.</p>
 
 
          </div>
