--- a/our_work/content-saludamerica.html
+++ b/our_work/content-saludamerica.html
@@ -38,7 +38,7 @@ A Project of Salud America!</h1>
 
  
 <br>
-<p>As part of Salud America! – an initiative of the Robert Wood Johnson Foundation – the John W. Gardner Center for Youth and Their Communities (JGC) at Stanford University is working with community partners in Redwood City, CA and the California Schools Boards Association (CSBA) to understand the effects of participating in a variety of after school programs on Latino and other students’ obesity and physical fitness outcomes.</p> 
+<p>As part of Salud America! – an initiative of the Robert Wood Johnson Foundation – the John W. Gardner Center for Youth and Their Communities at Stanford University is working with community partners in Redwood City, CA and the California Schools Boards Association (CSBA) to understand the effects of participating in a variety of after school programs on Latino and other students’ obesity and physical fitness outcomes.</p> 
 
  
 <br>
@@ -46,7 +46,7 @@ A Project of Salud America!</h1>
 
  <br>
 
-<p>The study results will be shared iteratively with community partners in order to help them work together and with their students to improve fitness and reduce obesity in this community.  Policy implications of this study include resource realignment for school districts and cities to support access to after school programs of all types, continued examination of policies that support physical fitness after school, and local partnerships that support young people in accessing a variety of out-of-school programs.  Data from this study will allow school board members, superintendents, city council members and city staff to look at further opportunities to partner and provide the supports needed to reduce obesity and improve fitness among youth. Further, the CSBA will work with JGC to develop sample school board policies and recommendations for school board members throughout the state. </p>
+<p>The study results will be shared iteratively with community partners in order to help them work together and with their students to improve fitness and reduce obesity in this community.  Policy implications of this study include resource realignment for school districts and cities to support access to after school programs of all types, continued examination of policies that support physical fitness after school, and local partnerships that support young people in accessing a variety of out-of-school programs.  Data from this study will allow school board members, superintendents, city council members and city staff to look at further opportunities to partner and provide the supports needed to reduce obesity and improve fitness among youth. Further, the CSBA will work with the Gardner Center to develop sample school board policies and recommendations for school board members throughout the state. </p>
 
  
          </div>
