--- a/our_work/content-capacity_building.html
+++ b/our_work/content-capacity_building.html
@@ -37,7 +37,7 @@
 
           <h1 class="content-text-header">Leadership Development</h1>
 
-<p>The JGC supports leaders within school districts and local youth-serving public agencies and community  based organizations to expand their potential by working cooperatively and collaboratively toward common goals.  In this sense, leadership development involves changing the paradigm from merely individually effective leaders to those who "can work in networks of responsibility" as John W. Gardner once wrote, to improve youth outcomes across boundaries and contexts.</p>
+<p>The Gardner Center supports leaders within school districts and local youth-serving public agencies and community  based organizations to expand their potential by working cooperatively and collaboratively toward common goals.  In this sense, leadership development involves changing the paradigm from merely individually effective leaders to those who "can work in networks of responsibility" as John W. Gardner once wrote, to improve youth outcomes across boundaries and contexts.</p>
 <br>  
 
 <p>We conduct leadership development through facilitation of initiatives and trainings that include:</p>
@@ -54,7 +54,7 @@
 
 
 <p>
-JGC works with partners to develop and expand their skills and knowledge about researchable questions, data collection and interpretation, and valid and reliable indicators of positive youth development that will result in actionable findings to improve outcomes for youth. The JGC builds capacity through ongoing partnerships that inquire deeply into "what works for youth" in and across settings and systems, and projects that:
+The Gardner Center works with partners to develop and expand their skills and knowledge about researchable questions, data collection and interpretation, and valid and reliable indicators of positive youth development that will result in actionable findings to improve outcomes for youth. The Gardner Center builds capacity through ongoing partnerships that inquire deeply into "what works for youth" in and across settings and systems, and projects that:
 </p>
 <br>
 <ol> 
