--- a/our_work/content-csri.html
+++ b/our_work/content-csri.html
@@ -25,7 +25,7 @@
     </aside>
 
 <span class="content-bold">Goal</span>
-<p>Initiated in 2010 with the generous support of The Stuart Foundation, the Community School Resource Initiative (CSRI) aims to offer emerging and developing community schools with high-quality information about effective practices and access to current research related to community schools. Sessions for CSRI will emphasize data use and evaluation through the Youth Data Archive (YDA), JGC's initiative that enables cross-sector youth data analysis. The CSRI will also engage the primary community school intermediaries in the Bay Area in a series of convenings to determine how to jointly develop a comprehensive system of supports for community schools in the Bay Area and beyond.</p>
+<p>Initiated in 2010 with the generous support of The Stuart Foundation, the Community School Resource Initiative (CSRI) aims to offer emerging and developing community schools with high-quality information about effective practices and access to current research related to community schools. Sessions for CSRI will emphasize data use and evaluation through the Youth Data Archive (YDA), the Gardner Center's initiative that enables cross-sector youth data analysis. The CSRI will also engage the primary community school intermediaries in the Bay Area in a series of convenings to determine how to jointly develop a comprehensive system of supports for community schools in the Bay Area and beyond.</p>
 <br>
 <span class="content-bold">What is a Community School?</span>
 <p>A community school is both a place and a set of partnerships between the school and other community resources. Its integrated focus on academics, health and social services, youth and community development and community engagement leads to improved student learning, stronger families and healthier communities. By using schools as community hubs and a whole child approach, community schools bring together many partners to offer a range of supports and opportunities to children, youth, families and communities.</p>
@@ -57,8 +57,7 @@
     <li>Silicon Valley Community Foundation</li>
     <li>University of California, Davis, Center for Community School Partnerships (CCSP)</li>
 </ul>
-<br>
-<p>For more information about this initiative, please contact Bernadette Thomas Butler at (650) 498.4889 or <a href="mailto:btbutler@stanford.edu">btbulter@stanford.edu</a>. To access tools and resources related to the JGC Community School Resource Initiative Site Learning Sessions, please visit <a href="http://communityschoolresourceinitiative.pbworks.com">The CSRI Wiki</a>.</p>
+
 
   
          </div>
