--- a/our_work/cris2.new.html
+++ b/our_work/cris2.new.html
@@ -204,60 +204,66 @@ var __adobewebfontsappname__ = "muse";
        <p id="u10201-3">&nbsp;</p>
        <p class="Main-Headline-Link" id="u10201-4">&nbsp;</p>
        <p id="u10201-6">College Readiness Indicator Systems:</p>
-       <p id="u10201-10">A New Framework for Ensuring that <br/>Students Are On Track</p>
+       <p id="u10201-10">
+         <a class="nonblock" id="u11037" href="/resources/publications/FrameworkNarrative.CRIS.pdf" target="_blank">
+           A New Framework for Ensuring that <br/>Students Are On Track
+         </a>
+       </p>
        <p id="u10201-11">&nbsp;</p>
        <p id="u10201-13">Placeholder link: Dynamic Diagram</p>
-       <p id="u10201-14"> 
-         <a class="nonblock nontext clip_frame colelem" id="u11037" href="/resources/publications/FrameworkNarrative.CRIS.pdf" target="_blank">Framework Narrative</a>
-       </p>
+       <p id="u10201-14">&nbsp;</p>
        <p id="u10201-15">&nbsp;</p>
        <p id="u10201-16">&nbsp;</p>
-       <p id="u10201-17">&nbsp;</p>
-       <p id="u10201-18">Menu of College Readiness Indicators</p>
-       <p id="u10201-20">and Supports</p>
-       <p id="u10201-21">&nbsp;</p>
-       <p id="u10201-22">
-         <a class="nonblock nontext clip_frame colelem" id="u11037" href="/resources/publications/Menu.CRIS.pdf" target="_blank">Menu</a>
+       <p id="u10201-18">
+         <a class="nonblock" id="u11037" href="/resources/publications/Menu.CRIS.pdf" target="_blank">
+           Menu of College Readiness Indicators</p>
+           <p id="u10201-20">and Supports
+         </a> 
        </p>
+       <p id="u10201-21">&nbsp;</p>
+       <p id="u10201-22">&nbsp;</p>
        <p id="u10201-23">&nbsp;</p>
        <p id="u10201-24">&nbsp;</p>
        <p id="u10201-25">&nbsp;</p>
        <p id="u10201-26">&nbsp;</p>
        <p id="u10201-27">&nbsp;</p>
-       <p id="u10201-28">&nbsp;</p>
-       <p id="u10201-29">Selecting Effective Indicators</p>
-       <p id="u10201-30">&nbsp;</p>
-       <p id="u10201-31">
-          <a class="nonblock nontext clip_frame colelem" id="u11037" href="/resources/publications/SelectingIndicators.CRIS.pdf" target="_blank">Selecting Indicators</a>
+       <p id="u10201-29">
+         <a class="nonblock" id="u11037" href="/resources/publications/SelectingIndicators.CRIS.pdf" target="_blank">
+           Selecting Effective Indicators
+         </a> 
        </p>
+       
+       <p id="u10201-30">&nbsp;</p>
+       <p id="u10201-31">&nbsp;</p>
        <p id="u10201-32">&nbsp;</p>
        <p id="u10201-33">&nbsp;</p>
        <p id="u10201-34">&nbsp;</p>
        <p id="u10201-35">&nbsp;</p>
-       <p id="u10201-36">&nbsp;</p>
-       <p id="u10201-37">A Technical Guide to College Readiness</p>
-       <p id="u10201-39">Indicators</p>
-       <p id="u10201-40">
-           <a class="nonblock nontext clip_frame colelem" id="u11037" href="/resources/publications/TechnicalGuide.CRIS.pdf" target="_blank">Technical Guide</a>
+       <p id="u10201-37">
+         <a class="nonblock" id="u11037" href="/resources/publications/TechnicalGuide.CRIS.pdf" target="_blank">
+           A Technical Guide to College Readiness</p>
+           <p id="u10201-39">Indicators
+         </a> 
        </p>
+       <p id="u10201-40">&nbsp;</p>
        <p id="u10201-41">&nbsp;</p>
        <p id="u10201-42">&nbsp;</p>
-       <p id="u10201-43">&nbsp;</p>
-       <p id="u10201-44">District Self&#45;Assessment Tool</p>
+       <p id="u10201-44">
+         <a class="nonblock" id="u11037" href="/resources/publications/SelfAssessment.CRIS.pdf" target="_blank">
+           District Self&#45;Assessment Tool</p>
+         </a> 
        <p id="u10201-45">&nbsp;</p>
-       <p id="u10201-46">
-            <a class="nonblock nontext clip_frame colelem" id="u11037" href="/resources/publications/SelfAssessment.CRIS.pdf" target="_blank">Self Assessment</a>
-       </p>
+       <p id="u10201-46">&nbsp;</p>
        <p id="u10201-47">&nbsp;</p>
        <p id="u10201-48">&nbsp;</p>
        <p id="u10201-49">&nbsp;</p>
        <p id="u10201-50">&nbsp;</p>
-       <p id="u10201-51">&nbsp;</p>
-       <p id="u10201-52">Essential Elements in Implementation</p>
-       <p id="u10201-50">&nbsp;</p>
-       <p id="u10201-50">
-            <a class="nonblock nontext clip_frame colelem" id="u11037" href="/resources/publications/EssentialElements.CRIS.pdf" target="_blank">Essential Elements</a>
+       <p id="u10201-52">
+         <a class="nonblock" id="u11037" href="/resources/publications/EssentialElements.CRIS.pdf" target="_blank">
+           Essential Elements in Implementation
+         </a>
        </p>
+
       </div>
       <div class="clearfix grpelem" id="u10204-62"><!-- content -->
        <p id="u10204-2">WHAT'S IN IT?</p>
