final before Gates CRIS push

--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
      </div>
      <div class="grpelem" id="u1022"><!-- simple frame --></div>
      <div class="clearfix grpelem" id="u7466-9"><!-- content -->
-      <p id="u7466-2"><span id="u7466">NEWS</span></p>
-      <p class="Main-Headline-Link" id="u7466-5"><a class="nonblock" href="https://ed.stanford.edu/news/stanfords-gardner-center-partners-calif-schools-new-reform-plan" target="_blank"><span id="u7466-3">California Office to Reform Education</span></a></p>
-      <p id="u7466-7">Through the California Office to Reform Education, the Gardner Center is helping eight of California's largest school districts to adopt new measures of success to improve student learning and close achievement gaps. The work with the districts comes after each was granted an unprecedented NCLB waiver, and makes the Gardner Center the data and analysis hub for one of the most closely watched school reform efforts in the country.</p>
+      <p id="u7466-2"><span id="u7466">RESEARCH HIGHLIGHTS</span></p>
+      <p class="Main-Headline-Link" id="u7466-5"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/pfa.html" target="_blank"><span id="u7466-3">San Mateo County Preschool for All</span></a></p>
+      <p id="u7466-7">Since 2011, the Gardner Center has examined school-based outcomes for San Mateo County <i>Preschool for All</i> students who went on to attend elementary school in Redwood City School District. The latest study follows these students through third grade, providing a complete look at the PreK to third grade experiences of children who participated in San Mateo County's high-quality preschool program.</p>
      </div>
      <div class="clearfix grpelem" id="u7524"><!-- group -->
       <div class="grpelem" id="u7504"><!-- custom html -->
@@ -228,9 +228,9 @@
       <a class="nonblock nontext clip_frame grpelem" id="u7495" href="https://twitter.com/gardnercenter"><!-- image --><img class="block" id="u7495_img" src="images/follow-from-web-u7495.jpg" alt="" width="80" height="30"/></a>
      </div>
      <div class="clearfix grpelem" id="u8392-10"><!-- content -->
-      <p id="u8392-2"><span id="u8392">RESEARCH HIGHLIGHTS</span></p>
-      <p class="Main-Headline-Link" id="u8392-5"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/pfa.html" target="_blank"><span id="u8392-3">San Mateo County Preschool For All</span></a></p>
-      <p id="u8392-8"><span><span class="actAsDiv normal_text" id="u8415"><!-- content --><span class="actAsDiv clip_frame" id="u8409"><!-- image --><img class="block" id="u8409_img" src="images/team/Monika2.jpg" alt="" width="105" height="150"/></span></span></span>Since 2011, the Gardner Center has examined school-based outcomes for San Mateo County <i>Preschool for All</i> students who went on to attend elementary school in Redwood City School District. The latest study follows these students through third grade, providing a complete look at the PreK to third grade experiences of children who participated in San Mateo County's high-quality preschool program.</p>
+      <p id="u8392-2"><span id="u8392">NEWS</span></p>
+      <p class="Main-Headline-Link" id="u8392-5"><a class="nonblock" href="/our_work/CRISResources.html" target="_blank"><span id="u8392-3">New College Readiness Resources</span></a></p>
+      <p id="u8392-8"><span><span class="actAsDiv normal_text" id="u8415"><!-- content --><span class="actAsDiv clip_frame" id="u8409"><!-- image --><img class="block" id="u8409_img" src="images/team/cris.png" alt="" width="100" height="126"/></span></span></span>More students than ever are enrolling in college after high school, but many are not college-ready. Indicator systems that identify students in need of support are an integral piece of the college-readiness puzzle. The CRIS Initiative takes an innovative tri-level approach which provides data at the student, school, and district levels, enabling districts to take a more comprehensive approach to supporting college readiness. <a href="https://ed.stanford.edu/news/new-resource-helps-school-districts-prepare-students-college-success">Read more.</a></p>
      </div>
      <div class="clip_frame grpelem" id="u9534" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="21" data-mu-ie-matrix-dy="-21"><!-- image -->
       <img class="block" id="u9534_img" src="images/red-circle.png" alt="" width="113" height="70"/>
