--- a/our_work/CRISResources.html
+++ b/our_work/CRISResources.html
@@ -203,10 +203,10 @@ var __adobewebfontsappname__ = "muse";
        <p id="u10201-2">RESOURCE</p>
        <p id="u10201-3">&nbsp;</p>
        <p class="Main-Headline-Link" id="u10201-4">&nbsp;</p>
-       <p id="u10201-6">College Readiness Indicator Systems:</p>
+       <p id="u10201-6">Beyond College Eligibility:</p>
        <p id="u10201-10">
          <a class="nonblock" id="u11037" href="/resources/publications/FrameworkNarrative.CRIS.pdf" target="_blank">
-           A New Framework for Ensuring that <br/>Students Are On Track
+           A New Framework for Promoting College Readiness
          </a>
        </p>
        <p id="u10201-11">&nbsp;</p>
@@ -432,7 +432,7 @@ var __adobewebfontsappname__ = "muse";
       </div>
       <div class="clearfix grpelem" id="pu10214-17"><!-- column -->
        <div class="clearfix colelem" id="u10214-17"><!-- content -->
-        <p><a class="nonblock" href="http://ccsr.uchicago.edu" target="_blank"><span id="u10214">University of Chicago Consortium on Chicago School Research</span></a>&nbsp;conducts research of high technical quality that can inform and assess policy and practice in the Chicago Public Schools. CCSR seeks to expand communication among researchers, policymakers, and practitioners as we support the search for solutions to the problems of school reform. <a class="nonblock" href="https://twitter.com/UChicagoCCSR" target="_blank">@UChicagoCCSR</a></p>
+        <p><a class="nonblock" href="http://ccsr.uchicago.edu" target="_blank"><span id="u10214">University of Chicago Consortium on Chicago School Research</span></a>&nbsp;(UChicago CCSR) conducts research of high technical quality that can inform and assess policy and practice in the Chicago Public Schools. UChicago CCSR seeks to expand communication among researchers, policymakers, and practitioners as it supports the search for solutions to the problems of school reform. It helps build capacity for school reform by identifying what matters for student success and school improvement, creating critical indicators to chart progress, and conducting theory-driven evaluation to identify how programs and policies are working. <a class="nonblock" href="https://twitter.com/UChicagoCCSR" target="_blank">@UChicagoCCSR</a></p>
         <p>&nbsp;</p>
         <p>A Technical Guide to College Readiness Indicators</p>
         <p>Selecting Effective Indicators</p>
