--- a/our_work/content-cris.html
+++ b/our_work/content-cris.html
@@ -12,6 +12,11 @@
    <br><br>
 <aside>
 <div class="right-side-box-under-video">
+
+<h1 class="content-text-header">The CRIS Resource Series</h1>
+Developed by the CRIS research partners, <a href="/our_work/CRISResources.html">the CRIS Resource Series</a> builds on lessons learned over the course of the three-year initiative and offers guidance to schools and districts that aim to develop and enact effective indicator and support systems.
+<br>
+<br>
 <h1 class="content-text-header">Partner Organizations</h1>
 
  <ul>
@@ -56,7 +61,7 @@
 <br>
 <ul>
 <li><b>academic preparedness</b>, the key academic content knowledge and skills and key cognitive strategies needed to succeed in doing college-level work</li>
-<li><b>academic tenacity</b>, the underlying beliefs and attitudes (such as motivation and aspiration) and accompanying academic behaviors that drive student achievement</li>
+<li><b>academic tenacity</b>, the underlying beliefs and attitudes  that drive student achievement</li>
 <li><b>college knowledge</b>, the knowledge base and contextual skills that enable students to successfully navigate college once they arrive</li>
 </ul>
 <br>
@@ -76,7 +81,7 @@ Further, CRIS generates and uses data that reflect activities, resources, proces
 <span class="content-bold">Our Role</span>
 <br>
 <br>
-<p>As a CRIS initiative partners, Gardner Center researchers developed and studied the implementation of the tri-level CRIS in conjuction with districts, using a flexible, "design-build" approach.</p>
+<p>As CRIS initiative partners, Gardner Center researchers developed and studied the implementation of the tri-level CRIS in conjuction with districts, using a flexible, "design-build" approach.</p>
 <br>
 <p>Specifically the Gardner Center has supported districts by:<p>
 <br>
@@ -98,8 +103,8 @@ Further, CRIS generates and uses data that reflect activities, resources, proces
 <span class="content-bold">The CRIS Resource Series</span>
 <br>
 <br>
-Developed by the CRIS research partners, the CRIS Resource Series builds on lessons learned over the course of the three-year initiative and offers guidance to schools and districts that aim to develop and enact effective indicator and support systems. Each resource was created with a particular audience in mind. As such, readers may opt to review the whole series or select only those resources that apply to their particular role or interest. Designed to guide a district through its successful implementaiton of a college readiness indicator system, the six-part CRIS Resource Series will be available for free download on May 1, 2014.
-
+Developed by the CRIS research partners, the CRIS Resource Series builds on lessons learned over the course of the three-year initiative and offers guidance to schools and districts that aim to develop and enact effective indicator and support systems. Each resource was created with a particular audience in mind. As such, readers may opt to review the whole series or select only those resources that apply to their particular role or interest. Designed to guide a district through its successful implementaiton of a college readiness indicator system, <a href="/our_work/CRISResources">six-part CRIS Resource Series</a> is available for free download.</p>
+<br>
 <p>For more information about the College Readiness Indicator Systems initiative, please contact Leslie Patron at <a href="mailto:lpatron@stanford.edu"> lpatron@stanford.edu. </a> </p>         </div>
 
 
