--- a/our_work/cris2.new.html
+++ b/our_work/cris2.new.html
@@ -174,7 +174,7 @@ var __adobewebfontsappname__ = "muse";
       <div class="clearfix grpelem" id="u10116-10"><!-- content -->
        <p id="u10116-4"><span id="u10116">[ </span><span>THE CRIS INITIATIVE</span><span id="u10116-3">&nbsp;]</span></p>
        <p class="Main-Headline-Link" id="u10116-5">&nbsp;</p>
-       <p id="u10116-8"><span id="u10116-6">In 2011, the Bill &amp; Melinda Gates Foundation launched the College Readiness Indicator Systems (CRIS) initiative in five urban sites across the country (see map). Each site began by appointing a CRIS Team composed of central office leadership and staff and other college readiness stakeholders in their community. The role of the CRIS Team was to provide ongoing feedback to build and refine an effective and actionable indicator system in response to their community’s unique needs.</span></p>
+       <p id="u10116-8"><span id="u10116-6">In 2011, the Bill &amp; Melinda Gates Foundation launched the <a href="cris.html">College Readiness Indicator Systems (CRIS)</a> initiative in five urban sites across the country (see map). Each site began by appointing a CRIS Team composed of central office leadership and staff and other college readiness stakeholders in their community. The role of the CRIS Team was to provide ongoing feedback to build and refine an effective and actionable indicator system in response to their community’s unique needs.</span></p>
       </div>
       <div class="clearfix grpelem" id="u10146-6"><!-- content -->
        <p>Initially, CRIS Teams selected indicators in each of the initiative’s three dimensions of college readiness: <span id="u10146-2">academic preparedness, academic tenacity, and college knowledge.</span>&nbsp;Further, within each dimension, indicators were selected at three levels: individual (student), setting (school), and system (district). Beginning in the second year of the initiative, each site aligned previous efforts with the CRIS Framework to implement an improved, dynamic college readiness indicator system.</p>
@@ -210,7 +210,9 @@ var __adobewebfontsappname__ = "muse";
          </a>
        </p>
        <p id="u10201-11">&nbsp;</p>
-       <p id="u10201-13">Placeholder link: Dynamic Diagram</p>
+       <p id="u10201-13">
+         <a class="nonblock" id="u11037" href="http://collegeready.gatesfoundation.org/Learning/CollegeReadinessIndicatorSystems" target="_blank">Online Framework</a> 
+       </p> 
        <p id="u10201-14">&nbsp;</p>
        <p id="u10201-15">&nbsp;</p>
        <p id="u10201-16">&nbsp;</p>
@@ -390,24 +392,24 @@ var __adobewebfontsappname__ = "muse";
       <p id="u12236-25">&nbsp;</p>
       <p class="CRIS-navigation" id="u12236-34"><a class="nonblock" href="http://vue.annenberginstitute.org/issues/38" target="_blank"><span id="u12236-26">• </span><span>COLLEGE READINESS INDICATOR SYSTEMS: <br/>A Framework for the Field <br/>(Voices in Urban Education No. 38)</span></a></p>
       <p id="u12236-35">&nbsp;</p>
-      <p class="CRIS-navigation" id="u12236-42"><a class="nonblock" href="http://gardnercenter.stanford.edu/resources/publications/collegereadinesslitreview.pdf" target="_blank"><span id="u12236-36">• </span><span>ANALYZING EVIDENCE OF COLLEGE <br/>READINESS: A Tri&#45;Level Empirical &amp; Conceptual Framework (Working Paper)</span></a></p>
+      <p class="CRIS-navigation" id="u12236-42"><a class="nonblock" href="http://gardnercenter.stanford.edu/resources/publications/collegereadinesslitreview.pdf"><span id="u12236-36">• </span><span>ANALYZING EVIDENCE OF COLLEGE <br/>READINESS: A Tri&#45;Level Empirical &amp; Conceptual Framework (Working Paper)</span></a></p>
       <p id="u12236-43">&nbsp;</p>
       <p class="CRIS-navigation" id="u12236-50"><a class="nonblock" href="http://permalink.fliqz.com/aspx/permalink.aspx?at=ecfdd4a7c70e496681c12ca6bd890d65&amp;a=7c89bf5398ac4c49a016c936e4542736" target="_blank"><span id="u12236-44">• </span><span>CRIS WEBINAR for Wallace Foundation <br/>Out&#45;of&#45;School&nbsp; Time Grantees</span></a></p>
       <p id="u12236-51">&nbsp;</p>
       <p id="u12236-52">&nbsp;</p>
       <p id="u12236-54"><span id="u12236-53">Related Projects:</span></p>
       <p id="u12236-55">&nbsp;</p>
-      <p class="CRIS-navigation" id="u12236-59"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/bts.html" target="_blank"><span id="u12236-56">• </span><span>San Francisco Bridge to Success</span></a></p>
+      <p class="CRIS-navigation" id="u12236-59"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/bts.html"><span id="u12236-56">• </span><span>San Francisco Bridge to Success</span></a></p>
       <p id="u12236-60">&nbsp;</p>
-      <p class="CRIS-navigation" id="u12236-64"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/okf.html" target="_blank"><span id="u12236-61">• </span><span>Oakland PASS&#45;2</span></a></p>
+      <p class="CRIS-navigation" id="u12236-64"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/okf.html"><span id="u12236-61">• </span><span>Oakland PASS&#45;2</span></a></p>
       <p id="u12236-65">&nbsp;</p>
-      <p id="u12236-68"><span id="u12236-66">• </span><span>CORE</span></p>
+      <p class="CRIS-navigation" id="u12236-64"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/core.html"><span id="u12236-61">• </span><span>CORE</span></a></p>
       <p id="u12236-69">&nbsp;</p>
-      <p id="u12236-72"><span id="u12236-70">• </span><span>College Access Foundation</span></p>
+      <p class="CRIS-navigation" id="u12236-64"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/collegeaccess.html"><span id="u12236-61">• </span><span>College Access Foundation</span></a></p>
       <p id="u12236-73">&nbsp;</p>
-      <p id="u12236-81"><span id="u12236-74">• </span><span>The Role of Broad&#45;Access Colleges <br/>in the San Francisco Bay Area Technology <br/>Economy</span></p>
+      <p class="CRIS-navigation" id="u12236-64"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/broadaccess.html"><span id="u12236-61">• </span><span>The Role of Broad&#45;Access Colleges <br/>in the San Francisco Bay Area Technology <br/>Economy</span></a></p>
       <p id="u12236-82">&nbsp;</p>
-      <p id="u12236-85"><span id="u12236-83">• </span><span>Roadtrip Nation</span></p>
+      <p class="CRIS-navigation" id="u12236-64"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/roadtripnation.html"><span id="u12236-61">• </span><span>Roadtrip Nation</span></a></p>
       <p id="u12236-86">&nbsp;</p>
       <p>&nbsp;</p>
      </div>
